--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="https://image.flaticon.com/icons/svg/197/197571.svg">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 /* Center the loader */
@@ -88,16 +89,17 @@
 	  position: relative;
     }
   body {
-      font: 20px verdana, monospace;
+      font: 20px san-serif, monospace;
       line-height: 1.8;
       color: #fcfcfc;
 	  background-color: black;
   }
 	  h3 {font-size: 38px
+	
+	font-family: monospace;	
 		}
-		
   p {font-size: 20px;
-		font-family: verdana;
+		font-family: san-serif;
 		
 		}
 	  
