--- a/index.html
+++ b/index.html
@@ -89,17 +89,15 @@
 	  position: relative;
     }
   body {
-      font: 20px san-serif, monospace;
+      font: 20px verdana, monospace;
       line-height: 1.8;
       color: #fcfcfc;
 	  background-color: black;
   }
-	  h3 {font-size: 38px
-	
-	font-family: monospace;	
+ h3 {font-size: 30px
 		}
   p {font-size: 20px;
-		font-family: san-serif;
+		font-family: verdana;
 		
 		}
 	  
@@ -341,7 +339,7 @@ activities which may involve some use of the target language;<br>
 	<A NAME="resource"></A>
 	<br>
 	<p>Here are some links to find out more about the syllabus;</p><br>
-  	<p>click <a href="https://www.education.ie/en/Schools-Colleges/Information/Curriculum-and-Syllabus/Senior-Cycle-/Syllabuses-and-Guidelines/lc_german_sy.pdf">here </a>to look at the german syllabus and <br>click <a href="https://www.curriculumonline.ie/getmedia/678b51c6-8c05-49a9-897f-480d826f7f8d/JCSEC11_German_syllabus.pdf">here </a>to learn more </p>
+  	<p>Click <a href="https://www.education.ie/en/Schools-Colleges/Information/Curriculum-and-Syllabus/Senior-Cycle-/Syllabuses-and-Guidelines/lc_german_sy.pdf">here </a>to look at the german syllabus and <br>Click <a href="https://www.curriculumonline.ie/getmedia/678b51c6-8c05-49a9-897f-480d826f7f8d/JCSEC11_German_syllabus.pdf">here </a>to learn more. </p>
    
     
 	
