--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="https://image.flaticon.com/icons/svg/197/197571.svg">
+	<link rel="shortcut icon" href="https://image.flaticon.com/icons/svg/197/197571.svg" type="image/x-icon" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 /* Center the loader */
