--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ activities which may involve some use of the target language;<br>
 <div class="container-fluid bg-3 text-center">    
 <A NAME="teacher"></A>
   <h3 class="margin">Teachers:</h3><br>
-	<p>The teachers for German are as follows;<br><strong>Ms. Kiely</strong><br><strong>Ms. Hall</strong<br><strong>Ms. Erwin</strong>
+	<p>The teachers for German are as follows;<br><strong>Ms. Kiely</strong><br><strong>Ms. Hall</strong><br><strong>Ms. Erwin</strong>
  
   
 	<br>
