--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
       position: fixed;
       width: 100%;
       background-color: white;
+      
   }
 		
 		
@@ -181,6 +182,7 @@ a.nav-link:active
 {
    color: #fb3f00;
    text-decoration: none;
+	font-family: verdana;
 }
 		
    a:link, a:visited, a:hover, a:active { color: #A0A0A0;
@@ -311,7 +313,7 @@ activities which may involve some use of the target language;<br>
 	</p>
 	
 	<br><br>
-	<p> Information from Ms.Kiely about the Subject:                </p>
+	<h3> Information from Ms.Kiely about the Subject:                </h3>
 	<br>
 	<p>...</p>
 	
