--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
   img.round {
     border: 2px solid white;
     border-radius: 14px;
-	  align: middle;
-	  position: relative;
+    align: middle;
+    position: relative;
+    display: block;
     }
   body {
       font: 20px verdana, monospace;
