--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@ a.nav-link:active
  General educational aims:
 The general educational aims of the Intermediate Certificate programme in the target
 language are:-<br>
-(a) To contribute to pupils’ awareness of language as a system of communication;<br>
-(b) To give pupils an awareness of another culture, and thus a more objective
-perspective of their own culture;<br>
-(c) To contribute to the development in pupils of the capacity to engage in fruitful
-transactions and interactions with others;<br>
+	‣To contribute to pupils’ awareness of language as a system of communication;<br>
+	‣To give pupils an awareness of another culture, and thus a more objective
+         perspective of their own culture;<br>
+	‣To contribute to the development in pupils of the capacity to engage in fruitful
+	transactions and interactions with others;<br>
 (d) Through (a), (b) and (c) to contribute to pupil’s overall personal and social
 development;<br>
 (e) To give pupils the possibility of access to sources of information, culture
