--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@ a.nav-link:active
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button> 
-      <a class="navbar-brand" href="#">German</a>
+      <a class="navbar-brand" href="https://stjrush.github.io/sitegerman.github.io/index.html">German</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://toddmilne13.github.io/germanweb/">HOME</a></li>
+        <li><a href="https://stjrush.github.io/sitegerman.github.io/index.html">HOME</a></li>
         <li><a href="#resource">RESOURCES</a></li>
         <li><a href="#course">COURSE</a></li>
 	      <li><a href="#learning">LEARNING</a></li>
