--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   width: 150px;
   height: 150px;
   margin: -75px 0 0 -75px;
-  border: 16px solid #f3f3f3;
+  border: 16px solid black;
   border-radius: 50%;
    border-top: 16px solid black;
  border-right: 16px solid red;
