--- a/index.html
+++ b/index.html
@@ -244,14 +244,15 @@ a.nav-link:active
  General educational aims:
 The general educational aims of the Intermediate Certificate programme in the target
 language are:-<br>
-	  
-	‣To contribute to pupils’ awareness of language as a system of communication;<br>
-	‣To give pupils an awareness of another culture, and thus a more objective
+	 <ol type="a"> 
+	To contribute to pupils’ awareness of language as a system of communication;<br>
+	To give pupils an awareness of another culture, and thus a more objective
          perspective of their own culture;<br>
-	‣To contribute to the development in pupils of the capacity to engage in fruitful
+	To contribute to the development in pupils of the capacity to engage in fruitful
 	transactions and interactions with others;<br>
 (d) Through (a), (b) and (c) to contribute to pupil’s overall personal and social
 development;<br>
+	</ol>
 (e) To give pupils the possibility of access to sources of information, culture
 enrichment and entertainment through the target language;<br>
 (f) To encourage and equip pupils to consider participating in social and cultural
