--- a/index.html
+++ b/index.html
@@ -245,13 +245,13 @@ a.nav-link:active
 The general educational aims of the Intermediate Certificate programme in the target
 language are:-<br>
 	 <ol type="a"> 
-		 <liTo contribute to pupils’ awareness of language as a system of communication;</li><br>
+		 <li>To contribute to pupils’ awareness of language as a system of communication;</li><br>
 	<li>To give pupils an awareness of another culture, and thus a more objective
 		perspective of their own culture;</li><br>
-	T<li>o contribute to the development in pupils of the capacity to engage in fruitful
+	<li>To contribute to the development in pupils of the capacity to engage in fruitful
 		 transactions and interactions with others;</li><br>
-<li>(d) Through (a), (b) and (c) to contribute to pupil’s overall personal and social
-	development;</li><br>
+(d) Through (a), (b) and (c) to contribute to pupil’s overall personal and social
+	development;<br>
  <li>To give pupils the possibility of access to sources of information, culture
 	 enrichment and entertainment through the target language;</li><br>
 <li>To encourage and equip pupils to consider participating in social and cultural
