--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   margin: -75px 0 0 -75px;
   border: 16px solid black;
   border-radius: 50%;
-   border-top: 16px solid black;
+   border-top: 16px solid #1f1f1f;
  border-right: 16px solid red;
  border-bottom: 16px solid yellow;
   width: 120px;
