--- a/index.html
+++ b/index.html
@@ -258,19 +258,21 @@ language are:-<br>
 	activities which may involve some use of the target language;</li><br> 
 	</ol>
 
-<strong>Communicative tasks:</strong><br> Saying hello
- Asking someone his/her name,
- Giving your own name,
- Asking someone his/her age,
- Giving your own age,
- Asking someone where he/she comes from,
- Saying where you come from,
- Introducing someone else,
- Finding out who someone is,
- Saying who someone is,
- Finding out who something belongs to,
- Saying who something belongs to,
- Saying goodbye.<br>
+<strong>Communicative tasks:</strong><br> 
+	<ul style="list-style-type:circle">
+		<li>Saying hello</li><br>
+		<li>Asking someone his/her name,</li><br>
+		<li>Giving your own name,</li><br>
+		<li>Asking someone his/her age,</li><br>
+		<li>Giving your own age,</li><br>
+		<li>Asking someone where he/she comes from,</li><br>
+		<li>Saying where you come from,</li><br>
+		<li>Introducing someone else,</li><br>
+		<li>Finding out who someone is,</li><br>
+		<li>Saying who someone is,</li><br>
+		<li>Finding out who something belongs to,</li><br>
+		<li>Saying who something belongs to,</li><br>
+		<li>Saying goodbye.</li><br>
  <strong>Some exponents: <strong><br> Guten Tag,
 (German) wie geht’s (+ DATIVE PRONOUN),
  wie + heißen,
