--- a/index.html
+++ b/index.html
@@ -273,18 +273,20 @@ language are:-<br>
 		<li>Finding out who something belongs to,</li><br>
 		<li>Saying who something belongs to,</li><br>
 		<li>Saying goodbye.</li><br>
- <strong>Some exponents: <strong><br> Guten Tag,
-(German) wie geht’s (+ DATIVE PRONOUN),
- wie + heißen,
- wie + alt + sein,
- sein + NUMBER + Jahre (+ alt),
- woher + kommen,
- kommen + aus + PLACE,
- sich vorstellen,
- wer + sein,
- wem + gehören,
- gehören + DATIVE OF OWNER,
- auf Wiedersehen.<br>
+ <strong>Some exponents: <strong><br> 
+	 <ul style="list-style-type:square">
+		 <li>Guten Tag,</li><br>
+		 <li>(German) wie geht’s (+ DATIVE PRONOUN),</li><br>
+		 <li>wie + heißen,</li><br>
+		 <li>wie + alt + sein,</li><br>
+		 <li>sein + NUMBER + Jahre (+ alt),</li><br>
+		 <li>woher + kommen,</li><br>
+		 <li>kommen + aus + PLACE,</li><br>
+		 <li>sich vorstellen,</li>,br>
+		 <li>wer + sein,</li><br>
+		 <li> wem + gehören,</li><br>
+		 <li>gehören + DATIVE OF OWNER,</li><br>
+		 <li>auf Wiedersehen.</li><br>
  This is a picture of the book you will be using in 3rd year
   
   </p><br>
