--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ language are:-<br>
 		 <li>sein + NUMBER + Jahre (+ alt),</li><br>
 		 <li>woher + kommen,</li><br>
 		 <li>kommen + aus + PLACE,</li><br>
-		 <li>sich vorstellen,</li>,br>
+		 <li>sich vorstellen,</li><br>
 		 <li>wer + sein,</li><br>
 		 <li> wem + gehören,</li><br>
 		 <li>gehören + DATIVE OF OWNER,</li><br>
