--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ a.nav-link:active
   " class="img-responsive img-circle margin" style="display:inline" width="370" height="350" >
 	</div>
 	<p>
-  Junior Cycle German focuses on improving students’ knowledge on Germany and on learning the language, foods, cities and more will also be learned throughout the course.
+  Junior Cycle German focuses on improving students knowledge on Germany and on learning the language, foods, cities and more will also be learned throughout the course.
   </p>
 	
 </div>
