--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
   from{ bottom:-100px; opacity:0 } 
   to{ bottom:0; opacity:1 }
 }
+	.progress-container {
+  width: 100%;
+  height: 8px;
+  background: #ccc;
+}
+
+.progress-bar {
+  height: 8px;
+  background: #1f1f1f;
+  width: 0%;
+}
+
 
 #myDiv {
   display: none;
