--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@
       color: #000000;
   }
 		
+		.bg-8 { 
+      background-color: #ffff00; /* yellow */
+      color: #000000;
+  }
+		
   .container-fluid {     
       padding-top: 70px;
       padding-bottom: 70px;
