--- a/index.html
+++ b/index.html
@@ -139,10 +139,7 @@
       color: #000000;
   }
 		
-		.bg-8 { 
-      background-color: #ffff00; /* yellow */
-      color: #000000;
-  }
+		
 		
   .container-fluid {     
       padding-top: 70px;
@@ -340,7 +337,8 @@ language are:-<br>
 	<br>
 	<p>Here are some links to find out more about the syllabus;</p><br>
   	<p>Click <a href="https://www.education.ie/en/Schools-Colleges/Information/Curriculum-and-Syllabus/Senior-Cycle-/Syllabuses-and-Guidelines/lc_german_sy.pdf">here </a>to look at the german syllabus and <br>Click <a href="https://www.curriculumonline.ie/getmedia/678b51c6-8c05-49a9-897f-480d826f7f8d/JCSEC11_German_syllabus.pdf">here </a>to learn more. </p>
-
+	<p>And here's a python code that teaches you some simple words and sentences:)</p>
+	<iframe src="https://trinket.io/embed/python/3d9550a2ae?outputOnly=true&runOption=run&start=result" width="100%" height="600" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 	<br>
 	
 	</div> 
