--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
   display: none;
   text-align: center;
 }
+	
+image{
+	postion: static;
+	}
 </style>
 </head>
 <body onload="myFunction()" style="margin:0;">
