--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ language are:-<br>
 		
 	<br>
 	<h3>Leaving Certificate German:</h3>
-	<p>*need info here</p><br>
+	<p>German is the second most popular European language for Leaving Cert.</p><br>
 		
 	<h3>The Exam:</h3><br>
 	<p>On the exam there is the following;</p>
@@ -324,7 +324,7 @@ language are:-<br>
 	<br><br>
 	<h3> Information from Ms.Kiely about the Subject:                </h3>
 	<br>
-	<p>...</p>
+	<p>Click <a href="https://www.examinations.ie/exammaterialarchive/?i=107.112.103.92.107">here </a>to see past Leaving Cert Papers</p>
 	
 	</div>
 	
