--- a/index.html
+++ b/index.html
@@ -306,20 +306,38 @@ language are:-<br>
 	<h3>Leaving Certificate German:</h3>
 	<p>German is the second most popular European language for Leaving Cert.</p><br>
 		
-	<h3>The Exam:</h3><br>
-	<p>On the exam there is the following;</p>
-		<li>Aural - Dialogue</li><br>
-		<li>Aural - Interview</li><br>
-		<li>Aural - News Pieces</li><br>
-		<li>Aural - Phone Call</li><br>
-		<li>Comprehension - Magazine or Newspaper</li><br>
-		<li>Comprehension - Novel or Short Story</li><br>
-		<li>Oral Exam</li><br>
-		<li>Write a Letter</li><br>
-		<li>Write about Grammar</li><br>
-		<li>Write on a Theme</li><br>
-		<li>Write on a Topic/Give Your Opinion</li><br>
-	</p>
+	<h3>The Exam</h3>
+
+<table>
+  <tr>
+    <th>Section</th>
+    <th>Higher Level</th>
+    <th>Ordinary Level</th>
+  </tr>
+  <tr>
+    <td>Speaking</td>
+    <td>25%</td>
+    <td>20%</td>
+    
+  </tr>
+  <tr>
+    <td>Listening Comprehension</td>
+    <td>20%</td>
+    <td>25%</td>
+  </tr>
+  <tr>
+    <td>Reading Comprehension</td>
+    <td>30%</td>
+    <td>40%</td>
+  </tr>
+  <tr>
+    <td>Writing</td>
+    <td>25%</td>
+    <td>15%</td>
+  </tr>
+
+    
+</table>
 	
 	<br><br>
 	<h3> Information from Ms.Kiely about the Subject:                </h3>
