--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 	
+	table {
+    font-family: monospace, verdana;
+    border-collapse: collapse;
+    width: 60%;
+}
+
+td, th {
+    border: 1px solid #000000;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #cccccc;
+}
+	
 /* Center the loader */
 #loader {
   position: absolute;
