--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ language are:-<br>
 		
 	<h3>The Exam</h3>
 
-<table>
+<table align="center">
   <tr>
     <th>Section</th>
     <th>Higher Level</th>
@@ -392,7 +392,7 @@ language are:-<br>
 var myVar;
 
 function myFunction() {
-    myVar = setTimeout(showPage, 2500);
+    myVar = setTimeout(showPage, 3000);
 }
 
 function showPage() {
