--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@ language are:-<br>
 	<A NAME="learning"></A>
 	  <img class="round" src="http://station1.highcliffe.dorset.sch.uk/autosite/images/PUBHOMEPAGE/GTA2%20Logo.jpg" height="300" width="500"><br>
 	<br>
-	<h3>Learning Outcomes and Assessment:</h3>
-	<p>*need to add info here<br>.</p><br>
+	<h3>More information on teachers:</h3>
+	<p>Click <a href="http://www.stjosephsrush.ie/staff-list/">here </a>to see more teachers in the school</p><br>
         
 	</div> 
 	
