--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ language are:-<br>
 </table>
 	
 	<br><br>
-	<h3> Information from Ms.Kiely about the Subject:                </h3>
+	<h3> Leaving Cert examination:                </h3>
 	<br>
 	<p>Click <a href="https://www.examinations.ie/exammaterialarchive/?i=107.112.103.92.107">here </a>to see past Leaving Cert Papers</p>
 	
