--- a/index.html
+++ b/index.html
@@ -358,6 +358,9 @@ language are:-<br>
 	<br><br>
 	<h3> Leaving Cert examination:                </h3>
 	<br>
+	<p>Leaving Certificate German follows a common syllabus framework for the teaching and examining of modern languages in the Leaving Certificate.<br> The syllabus aims to develop learners’ communicative skills in the German, to develop their strategies for effective language learning and raise their awareness of cultural, social and political diversity.</p>
+
+Assessment is by means of a written examination, and an aural and oral examination at two levels, Ordinary level and Higher level.
 	<p>Click <a href="https://www.examinations.ie/exammaterialarchive/?i=107.112.103.92.107">here </a>to see past Leaving Cert Papers</p>
 	
 	</div>
