--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ a.nav-link:active
 <div class="container-fluid bg-3 text-center">    
 <A NAME="teacher"></A>
   <h3 class="margin">Teachers:</h3><br>
-	<p>The teachers for German are as follows;<br><strong>Ms. Kiely</strong><br><strong>Ms. Hall</strong><br><strong>Ms. Erwin</strong>
+	<p>The teachers for German are as follows;<br>Ms. Kiely><br>Ms. Hall<br>Ms. Erwin
  
   
 	<br>
