--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ a.nav-link:active
 }
 		
    a:link, a:visited, a:hover, a:active { color: #A0A0A0;
-       text-decoration: none; font-size: 22px;
+       text-decoration: none; font-size: 22px; font-family: verdana;
      }
 		
   </style>
@@ -290,7 +290,7 @@ a.nav-link:active
 
 
 	
-  <h3>What it's about</h3>
+  <h3>What it's about:</h3>
 	<div class="german-flag">
   <br><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Flag_of_Germany.svg/1280px-Flag_of_Germany.svg.png
   " class="img-responsive img-circle margin" style="display:inline" width="370" height="350" >
@@ -388,7 +388,7 @@ Assessment is by means of a written examination, and an aural and oral examinati
 	
 	<div class="container-fluid bg-6 text-center">  
 	
-	<h3>Resources for Students</h3>
+	<h3>Resources for Students:</h3>
 	<A NAME="resource"></A>
 	<br>
 	<p>Here are some links to find out more about the syllabus;</p><br>
