--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ a.nav-link:active
 		
 	<br>
 	<h3>Leaving Certificate German:</h3>
-	<p>German is the second most popular European language for Leaving Cert.</p><br>
+	<p>German is the second most popular European language for LC. Like all the languages, the exam is geared to let you show off your knowledge rather than to show what you don't know.</p><br>
 		
 	<h3>The Exam</h3>
 
