--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ a.nav-link:active
 	<p>
   Junior Cycle German focuses on improving students knowledge on Germany and on learning the language, foods, cities and more will also be learned throughout the course.
   </p>
-	
+<p>Click <a href="https://www.examinations.ie/exammaterialarchive/?i=107.112.103.92.107">here </a>to see past Junior Cert Papers</p>	
 </div>
 
 
