--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@ a.nav-link:active
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://stjrush.github.io/sitegerman.github.io/index.html">HOME</a></li>
         <li><a href="#resource">RESOURCES</a></li>
-        <li><a href="#course">JC</a></li>
-	      <li><a href="#learning">LC</a></li>
+        <li><a href="#course">Junior Cert</a></li>
+	      <li><a href="#learning">Leaving Cert</a></li>
 	      <li><a href="#teacher">TEACHER</a></li>
       </ul> 
   </div>
