--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ Assessment is by means of a written examination, and an aural and oral examinati
 	
 
 <footer class="container-fluid bg-4 text-center">
- <p>Created by:<br>Todd Milne and Jessica Tobin Leonard
+ <p>Created by:<br>Todd and Jessica
 </footer>
 		</div>
 
