--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ a.nav-link:active
 
 <div class="container-fluid bg-3 text-center">    
 <A NAME="teacher"></A>
-  <h3 class="margin">Teachers:</h3><br>
+  <h3 class="margin">Teachers:</h3>
 	<p>The teachers for German are as follows;<br>Ms. Kiely<br>Ms. Hall<br>Ms. Erwin </p>
  
  
